--- a/Website/WebsiteFrontend/src/app/pages/contact/contact.component.html
+++ b/Website/WebsiteFrontend/src/app/pages/contact/contact.component.html
@@ -11,7 +11,7 @@
             <tr>
                 <td>E-Mail</td>
                 <td><input class="inputCopy" type="text" value={{contactInfo.email}} id="myInput" readonly></td>
-                <td><button class="btn btn-primary" onclick="copy()"><i class="fa fa-clipboard" aria-hidden="true"></i></button></td>
+                <td><button class="btn btn-info" onclick="copy()"><i class="fa fa-clipboard" aria-hidden="true"></i></button></td>
             </tr>
         </table>
 
@@ -19,3 +19,29 @@
 
     </div>
 </div>
+
+<div style="padding: 25px 0; background: #1a1c1f; position: fixed; bottom: 0; width: 100%">
+        <div class="row-footer">
+            <div class="col-sm-6 copyright">
+                <p>
+                    &copy; 2019 Rickie Karp
+                </p>
+            </div>
+            <div class="col-sm-6 social">
+                  <ul>
+                      <li>
+                          <a href="https://gitlab.com/rickie.karp" target="_blank"><i class="fa fa-gitlab" aria-hidden="true"></i></a>
+                      </li>
+                      <li>
+                          <a href="https://git.rickiekarp.net" target="_blank"><i class="fa fa-git-square" aria-hidden="true"></i></a>
+                      </li>
+                      <li>
+                          <a href="https://www.linkedin.com/in/rickiekarp/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                      </li>
+                      <li>
+                          <a href="https://www.xing.com/profile/Rickie_Karp" target="_blank"><i class="fa fa-xing" aria-hidden="true"></i></a>
+                      </li>
+                  </ul>
+              </div>
+          </div>
+      </div>
