--- a/Website/WebsiteFrontend/src/app/pages/home/home.component.html
+++ b/Website/WebsiteFrontend/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div style="background: #111111; margin: 0 auto; padding: 50px 55px 0px 55px;">
     <h1>Hi {{currentUser.username}}!</h1>
     <h3>All registered users:</h3>
     <ul>
