--- a/Website/WebsiteFrontend/src/style.less
+++ b/Website/WebsiteFrontend/src/style.less
@@ -31,7 +31,7 @@ strong {
 
 
 #content {
-  margin-top: @spacing;
+  padding: 50px 15px 20px 15px;
   text-align: center;
   background: #111111;
 }
@@ -45,7 +45,7 @@ strong {
   background: fade(@color-light, 3%);
   color: fade(white, 80%);
   font-family: @font-text;
-  margin: @spacing auto;
+  margin: 0 auto;
   letter-spacing: 0.5px;
   position: relative;
   line-height: 1.4em;
