--- a/Website/WebsiteFrontend/src/app/pages/professional/professional.component.html
+++ b/Website/WebsiteFrontend/src/app/pages/professional/professional.component.html
@@ -11,7 +11,7 @@
                     <p>
                         Lords & Knights is a medieval strategy MMO game available for Browser, iOS and Android. <br>Play with thousands of other lords, create massive armies and conquer hundreds of new castles. There is no limit in this game!
                     </p>
-                    <a class="btn btn-primary" [routerLink]="['/projects', 'lordsandknights']">Show more</a>
+                    <a class="btn btn-info" [routerLink]="['/projects', 'lordsandknights']">Show more</a>
                 </div>
                 <!-- End .project-info -->
             </div>
@@ -27,7 +27,7 @@
                     <p>
                         Live an exciting life in the country with your own farm in Goodgame Big Farm! <br>You’re in charge of planting and harvesting your fields and, of course, raising your own pigs and cows! <br>You’ll also have to prove your business skills by selling your goods on the market. With your profits, you can keep upgrading and expanding your farm until you become the greatest farmer far and wide!
                     </p>
-                    <a class="btn btn-primary" [routerLink]="['/projects', 'bigfarm']">Show more</a>
+                    <a class="btn btn-info" [routerLink]="['/projects', 'bigfarm']">Show more</a>
                 </div>
                 <!-- End .project-info -->
             </div>
