--- a/Website/WebsiteFrontend/src/app/pages/table/components/data-table/data-table.component.scss
+++ b/Website/WebsiteFrontend/src/app/pages/table/components/data-table/data-table.component.scss
@@ -19,7 +19,7 @@
     }
 }
 
-.my-pagination /deep/ .ngx-pagination {
+.my-pagination .ngx-pagination {
     border: 1px solid $border-color;
     border-radius: 5px;
     overflow: hidden;
