--- a/Website/WebsiteFrontend/src/app/app.component.html
+++ b/Website/WebsiteFrontend/src/app/app.component.html
@@ -11,7 +11,7 @@
             <li class="nav-item"><a class="nav-link" routerLink="contact"><label>Contact</label></a></li>
         </ul>
         <ul class="nav navbar-nav" routerLinkActive="active">
-            <div class="navbar-nav" *ngIf="currentUser; else loggedOut">
+            <div class="navbar-nav" *ngIf="currentUser && currentUser.username; else loggedOut">
                 <li class="nav-item"><a class="nav-link" routerLink="pages/index"><label>Dashboard</label></a></li>
                 <li><app-profile-popover></app-profile-popover></li>
             </div>
