Update contact page design

--- a/Website/WebsiteFrontend/src/app/pages/contact/contact.component.html
+++ b/Website/WebsiteFrontend/src/app/pages/contact/contact.component.html
@@ -1,11 +1,13 @@
+<div id="block">
+    <div class="block-test">
+        <profile></profile>
+    </div>
+</div>
+
 <div id="education">
     <div class="education-block">
-        <h3>Contact information</h3><br><br>
-
         <table>
             <tr>
-                <td>Name</td>
-                <td>{{contactInfo.name}}</td>
                 <td></td>
             </tr>
             <tr>
@@ -14,34 +16,5 @@
                 <td><button class="btn btn-info" onclick="copy()"><i class="fa fa-clipboard" aria-hidden="true"></i></button></td>
             </tr>
         </table>
-
-        <br><br><p align="center">If you would like to meet me in person or have any other questions, feel free to contact me!</p><br>
-
     </div>
 </div>
-
-<div style="padding: 25px 0; background: #1a1c1f; position: fixed; bottom: 0; width: 100%">
-        <div class="row-footer">
-            <div class="col-sm-6 copyright">
-                <p>
-                    &copy; 2019 Rickie Karp
-                </p>
-            </div>
-            <div class="col-sm-6 social">
-                  <ul>
-                      <li>
-                          <a href="https://gitlab.com/rickie.karp" target="_blank"><i class="fa fa-gitlab" aria-hidden="true"></i></a>
-                      </li>
-                      <li>
-                          <a href="https://git.rickiekarp.net" target="_blank"><i class="fa fa-git-square" aria-hidden="true"></i></a>
-                      </li>
-                      <li>
-                          <a href="https://www.linkedin.com/in/rickiekarp/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                      </li>
-                      <li>
-                          <a href="https://www.xing.com/profile/Rickie_Karp" target="_blank"><i class="fa fa-xing" aria-hidden="true"></i></a>
-                      </li>
-                  </ul>
-              </div>
-          </div>
-      </div>
