--- a/Website/WebsiteFrontend/src/app/shared/components/profile/profile.component.html
+++ b/Website/WebsiteFrontend/src/app/shared/components/profile/profile.component.html
@@ -8,39 +8,34 @@
       <span class="user-post">{{userPost}}</span>
       <span class="map-location">
         <i class="fa fa-map-marker"></i>
-        <span>Shen Zhen</span>
+        <span>{{location}}</span>
       </span>
     </div>
     <div class="profile-head">
       <img src="{{avatarImgSrc}}" alt="profile-head-bg" class="profile-head-bg">
     </div>
     <div class="profile-foot">
-      <h4>Skills</h4>
-      <div class="skills-wrap">
-        <a href="#" class="skills-tag">interface</a>
-        <a href="#" class="skills-tag">interface</a>
-        <a href="#" class="skills-tag">interface</a>
-        <a href="#" class="skills-tag">interface</a>
-        <a href="#" class="skills-tag">interface</a>
-        <a href="#" class="skills-tag">interface</a>
-        <a href="#" class="skills-tag">interface</a>
-      </div>
+      <br><p align="center">If you would like to meet me in person or have any other questions, feel free to contact me!</p><br>
+
       <h4>Social</h4>
       <ul class="contact-way-item">
         <li class="contact-way-list">
-          <a href="#" class="info-icon fa fa-wechat"></a>
+          <a href="https://gitlab.com/rickie.karp" target="_blank" class="info-icon fa fa-gitlab"></a>
         </li>
         <li class="contact-way-list">
-          <a href="#" class="info-icon fa fa-weibo"></a>
+          <a href="https://git.rickiekarp.net" target="_blank" class="info-icon fa fa-git-square"></a>
         </li>
         <li class="contact-way-list">
-          <a href="#" class="info-icon fa fa-facebook"></a>
+          <a href="https://www.linkedin.com/in/rickiekarp/" target="_blank" class="info-icon fa fa-linkedin"></a>
         </li>
         <li class="contact-way-list">
-          <a href="#" class="info-icon fa fa-github"></a>
+          <a href="https://www.xing.com/profile/Rickie_Karp" target="_blank" class="info-icon fa fa-xing"></a>
         </li>
         <li class="contact-way-list">
-          <a href="#" class="info-icon fa fa-envelope"></a>
+            <a href="https://twitter.com/rickiekarp" target="_blank" class="info-icon fa fa-twitter"></a>
+        </li>
+        <li class="contact-way-list">
+          <a href="mailto:{{email}}" class="info-icon fa fa-envelope"></a>
         </li>
       </ul>
     </div>
