--- a/Website/WebsiteFrontend/src/app/shared/theme/color-schemes/_dark.scss
+++ b/Website/WebsiteFrontend/src/app/shared/theme/color-schemes/_dark.scss
@@ -2,8 +2,8 @@
 $default-text:14px;
 $sm-text:12px;
 $lg-text:16px;
-$body-bg:#141420;
-$sidebar-bg:#171824;
+$body-bg:#2e3238;
+$sidebar-bg:#1a1c1f;
 $sidebar-fonts-color:#fff;
 $card-bg:#171824;
 $card-border:transparent;
@@ -12,7 +12,7 @@ $black:#000;
 $border-color:#12121f;
 $table-border-color:#12121f;
 $fonts-color:#fff;
-$primary:#fd8f00;
+$primary:#319bff;
 $success:#04ad53;
 $danger:#ff184a;
 $warning:#ff7300;
