--- a/Website/WebsiteFrontend/src/app/shared/theme/cover/_card.scss
+++ b/Website/WebsiteFrontend/src/app/shared/theme/cover/_card.scss
@@ -1,12 +1,11 @@
 .card {
     width: auto;
     height: auto;
-    background: $card-bg;
+    background: $sidebar-bg;
     position: relative;
-    border: 1px solid $card-border;
     border-radius: 2px;
     color: $fonts-color;
-    margin-bottom: 24px; //@include box-shadow(-1px 2px 10px rgba($black, .1));
+    margin-bottom: 0px; //@include box-shadow(-1px 2px 10px rgba($black, .1));
 }
 
 .card-block {
