--- a/Website/WebsiteFrontend/src/app/shared/components/todolist/todolist.component.scss
+++ b/Website/WebsiteFrontend/src/app/shared/components/todolist/todolist.component.scss
@@ -19,6 +19,10 @@
     display: flex;
 }
 
+i {
+    color: white;
+ }
+
 .new-task-input {
     display: block;
     margin: 0 10px;
@@ -54,7 +58,7 @@
     height: 39px;
     line-height: 40px;
     text-align: left;
-    font-size: 12px;
+    font-size: 16px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis
