--- a/projects/JavaFXApps/core/src/main/resources/themes/LightTheme.css
+++ b/projects/JavaFXApps/core/src/main/resources/themes/LightTheme.css
@@ -1,32 +1,27 @@
-@font-face {
-    font-family: 'Roboto';
-    src: url('../fonts/Roboto-Regular.ttf');
-}
-
 .root{
     -fx-font-size: 14pt;
-    -fx-font-family: "Roboto";
+    -fx-font-family: "Verdana";
     -fx-base: derive(#1d1d1d, 20%);
     -fx-background-color: derive(-fx-base,30%);
 }
 
 .label {
     -fx-font-size: 11pt;
-    -fx-font-family: "Roboto";
+    -fx-font-family: "Verdana";
     -fx-text-fill: white;
     -fx-opacity: 0.6;
 }
 
 .label-bright {
     -fx-font-size: 11pt;
-    -fx-font-family: "Roboto";
+    -fx-font-family: "Verdana";
     -fx-text-fill: white;
     -fx-opacity: 1;
 }
 
 .label-header {
     -fx-font-size: 32pt;
-    -fx-font-family: "Roboto";
+    -fx-font-family: "Verdana";
     -fx-text-fill: white;
     -fx-opacity: 1;
 }
@@ -105,7 +100,7 @@
     -fx-border-width: 2;
     -fx-background-radius: 0;
     -fx-background-color: #1d1d1d;
-    -fx-font-family: "Roboto";
+    -fx-font-family: "Verdana";
     -fx-font-size: 11pt;
     -fx-text-fill: #d8d8d8;
 }
@@ -156,7 +151,7 @@
     -fx-border-width: 2;
     -fx-background-radius: 0;
     -fx-background-color: derive(-fx-base, 10%);
-    -fx-font-family: "Roboto";
+    -fx-font-family: "Verdana";
     -fx-font-size: 11pt;
     -fx-text-fill: #d8d8d8;
 }
@@ -192,7 +187,7 @@
 
  .sidebar-button {
      -fx-border-width: 0;
-     -fx-font-family: 'Roboto';
+     -fx-font-family: 'Verdana';
      -fx-text-fill: #d8d8d8;
      -fx-background-color: derive(#3a3a3a, 20%);
      -fx-font-size: 10pt;
@@ -445,7 +440,7 @@
 
  .menu-bar .label {
      -fx-font-size: 14pt;
-     -fx-font-family: "Roboto";
+     -fx-font-family: "Verdana";
      -fx-text-fill: white;
      -fx-opacity: 0.9;
  }
@@ -470,7 +465,7 @@
 .menu-item .label {
     -fx-padding: 0em 0.5em 0em 0em;
     -fx-text-fill: white;
-    -fx-font-family: "Roboto";
+    -fx-font-family: "Verdana";
     -fx-font-size: 11pt;
 }
 
@@ -745,7 +740,7 @@
 
 .text-field {
     -fx-font-size: 12pt;
-    -fx-font-family: "Roboto";
+    -fx-font-family: "Verdana";
     -fx-background-color: black;
     -fx-text-fill: white;
 }
