--- a/projects/WebsiteFrontend/src/app/pages/professional/professional.component.html
+++ b/projects/WebsiteFrontend/src/app/pages/professional/professional.component.html
@@ -1,37 +1,269 @@
 <div id="projects">
+
     <div class="container">
-        <div class="row">
-            <div class="project shadow-large">
-                <div class="project-image">
-                    <img src="assets/images/LordsandKnights-Logo.jpg" width="300" />
+        <h2 class="heading">Professional</h2>
+        <div class="c0144 c0156 c0157">
+
+            <div class="c01159">
+                <div class="c01160 c01105" [routerLink]="['/projects', 'kingdomunderfire2']">
+                    <div class="project-image">
+                        <img src="assets/images/logo-kuf2.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Kingdom Under Fire 2</h3>
+                        <p>
+                            RTS / MMORPG
+                        </p>
+                    </div>
+                    <!-- End .project-info -->
                 </div>
-                <!-- End .project-image -->
-                <div class="project-info">
-                    <h3>Lords & Knights</h3>
-                    <p>
-                        Lords & Knights is a medieval strategy MMO game available for Browser, iOS and Android. <br>Play with thousands of other lords, create massive armies and conquer hundreds of new castles. There is no limit in this game!
-                    </p>
-                    <a class="btn btn-info" [routerLink]="['/projects', 'lordsandknights']">Show more</a>
-                </div>
-                <!-- End .project-info -->
             </div>
             <!-- End .project -->
 
-            <div class="project shadow-large">
-                <div class="project-image">
-                    <img src="assets/images/BigFarm-Logo.jpg" width="300" />
+            <div class="c01159">
+                <div class="c01160 c01105" [routerLink]="['/projects', 'guardiansofember']">
+                    <div class="project-image">
+                        <img src="assets/images/logo-goe.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Guardians of Ember</h3>
+                        <p>
+                            MMORPG
+                        </p>
+                    </div>
+                    <!-- End .project-info -->
                 </div>
-                <!-- End .project-image -->
-                <div class="project-info">
-                    <h3>Goodgame BigFarm</h3>
-                    <p>
-                        Live an exciting life in the country with your own farm in Goodgame Big Farm! <br>You’re in charge of planting and harvesting your fields and, of course, raising your own pigs and cows! <br>You’ll also have to prove your business skills by selling your goods on the market. With your profits, you can keep upgrading and expanding your farm until you become the greatest farmer far and wide!
-                    </p>
-                    <a class="btn btn-info" [routerLink]="['/projects', 'bigfarm']">Show more</a>
-                </div>
-                <!-- End .project-info -->
             </div>
             <!-- End .project -->
+
+            <div class="c01159">
+                <div class="c01160 c01105" [routerLink]="['/projects', 'battlehordes']">
+                    <div class="project-image">
+                        <img src="assets/images/logo-bh.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Battle Hordes</h3>
+                        <p>
+                            Strategy MMO
+                        </p>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+            </div>
+            <!-- End .project -->
+
+            <div class="c01159">
+                <div class="c01160 c01105" [routerLink]="['/projects', 'lordsandknights']">
+                    <div class="project-image">
+                        <img src="assets/images/logo-lk.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Lords & Knights</h3>
+                        <p>
+                            Strategy MMO
+                        </p>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+            </div>
+            <!-- End .project -->
+
+            <div class="c01159">
+                <div class="c01160 c01105" [routerLink]="['/projects', 'bigfarm']">
+                    <div class="project-image">
+                        <img src="assets/images/logo-bf.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Goodgame BigFarm</h3>
+                        <p>
+                                Simulation
+                        </p>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+            </div>
+            <!-- End .project -->
+
+            <div class="c01159">
+                <div class="c01160 c01105" [routerLink]="['/projects', 'empirefourkingdoms']">
+                    <div class="project-image">
+                        <img src="assets/images/logo-e4k.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Empire: Four Kingdoms</h3>
+                        <p>
+                            Strategy MMO
+                        </p>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+            </div>
+            <!-- End .project -->
+
+            <div class="c01159">
+                <div class="c01160 c01105" [routerLink]="['/projects', 'empire']">
+                    <div class="project-image">
+                        <img src="assets/images/logo-ep.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Goodgame Empire</h3>
+                        <p>
+                            Strategy MMO
+                        </p>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+            </div>
+            <!-- End .project -->
+        </div>
+
+        <br><br>
+        <h2 class="heading">Private</h2>
+        <div class="c0144 c0156 c01384">
+
+            <div class="c01159">
+                <div class="c01160 c01105" [routerLink]="['/projects', 'snakefx']">
+                    <div class="project-image">
+                        <img src="assets/images/logo-snakefx.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>SnakeFX</h3>
+                        <p>
+                            Snake game
+                        </p>
+                    </div>
+                    <!-- End .project-info --> 
+                </div>
+            </div>
+            <!-- End .project -->
+
+            <div class="c01159">
+                <div class="c01160 c01105" [routerLink]="['/projects', 'homebackend']">
+                    <div class="project-image">
+                        <img src="assets/images/logo-homebackend.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Home Automation</h3>
+                        <p>
+                            Home Server
+                        </p>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+            </div>
+            <!-- End .project -->
+
+            <div class="c01159">
+                <div class="c01160 c01105" [routerLink]="['/projects', 'sha1pass']">
+                    <div class="project-image">
+                        <img src="assets/images/logo-sha1pass.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>SHA1Pass</h3>
+                        <p>
+                            Password generator
+                        </p>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+            </div>
+            <!-- End .project -->
+
+            <div class="c01159">
+                <div class="c01160 c01105" [routerLink]="['/projects', 'filelistcreator']">
+                    <div class="project-image">
+                        <img src="assets/images/logo-filelistcreator.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>FilelistCreator</h3>
+                        <p>
+                            Filelist generator
+                        </p>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+            </div>
+            <!-- End .project -->
+
+            <div class="c01159">
+                <div class="c01160 c01105" [routerLink]="['/projects', 'botmanager']">
+                    <div class="project-image">
+                        <img src="assets/images/logo-botmanager.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Web Bot</h3>
+                        <p>
+                            Browser automation
+                        </p>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+            </div>
+            <!-- End .project -->
+
+            <div class="c01159">
+                <div class="c01160 c01105" [routerLink]="['/projects', 'assistant']">
+                    <div class="project-image">
+                        <img src="assets/images/logo-assistant.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Assistant</h3>
+                        <p>
+                            Android App
+                        </p>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+            </div>
+            <!-- End .project -->
+
+            <div class="c01159">
+                <div class="c01160 c01105" [routerLink]="['/projects', 'reddit']">
+                    <div class="project-image">
+                        <img src="assets/images/logo-reddit.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>RedditIsFun (Fork)</h3>
+                        <p>
+                            Android App
+                        </p>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+            </div>
+            <!-- End .project -->
+
+            <div class="c01159">
+                <div class="c01160 c01105" [routerLink]="['/projects', 'university']">
+                    <div class="project-image">
+                        <img src="assets/images/logo-unihh.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>University</h3>
+                        <p>
+                            Assignment collection
+                        </p>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+            </div>
+            <!-- End .project -->
+
         </div>
     </div>
 </div>
