--- a/projects/WebsiteFrontend/src/style.less
+++ b/projects/WebsiteFrontend/src/style.less
@@ -29,11 +29,83 @@ strong {
   font-weight: 600;
 }
 
+p {
+  margin-bottom: 0;
+}
+
 
 #content {
   padding: 50px 15px 20px 15px;
   text-align: center;
   background: #111111;
+}
+
+.c0144 {
+  width: 100%;
+  max-width: 1200px;
+}
+.c0156 {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+
+.c01159 {
+  @media screen and (min-width: 768px) {
+    .c01159 {
+      max-width: 33%;
+    }
+  }
+  
+  @media screen and (min-width: 568px) {
+    .c01159 {
+      max-width: 50%;
+    }
+  }
+
+  display: flex;
+  margin: 0px 25px 25px 25px;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+
+.c01160 {
+  &:hover {
+    background: rgb(39, 39, 39);
+  }
+
+  @media screen and (max-width: 568px) {
+    .c01160 {
+      width: 300px;
+    }
+  }
+}
+
+.c01105 {
+  color: #fff;
+  cursor: pointer; 
+  display: inline-flex;
+  position: relative;
+  overflow: hidden;
+  max-width: 100%;
+  transition: all 0.25s;
+  flex-direction: column;
+  text-decoration: none;
+  background-color: rgba(0,0,0,.3);
+}
+
+.tile_div a {
+  width: 100px;
+  margin: 10px;
+}
+
+.title_div a.last {
+  margin-right: 0;
+}
+
+.clear {
+  clear: both;
 }
 
 /* Timeline */
@@ -54,7 +126,7 @@ strong {
   list-style: none;
   text-align: left;
   font-weight: 100;
-  max-width: 30%;
+  max-width: 50%;
 
   h1 {
    font-family: @font-title;
