--- a/projects/WebsiteFrontend/src/styles.scss
+++ b/projects/WebsiteFrontend/src/styles.scss
@@ -266,7 +266,8 @@ footer{
    color: white;
    max-width: 900px;
    margin: 0 auto;
-   background-color:#1a1c1f ;
+   background-color:#1a1c1f;
+   width: 900px;
 }
 
 .social{
