--- a/projects/WebsiteFrontend/src/app/pages/login/login.component.html
+++ b/projects/WebsiteFrontend/src/app/pages/login/login.component.html
@@ -23,3 +23,16 @@
         </form>
     </div>
 </div>
+
+<!-- <div id="projects">
+    <div class="container">
+        <div class="row">
+            <div class="project shadow-large">
+                <div class="project-info">
+                    <h3>No account yet?</h3>
+                    <button style="margin-top: 10px;" routerLink="/register" class="btn btn-default btn-lg">Register</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div> -->
