--- a/projects/WebsiteFrontend/src/app/pages/projects/projects.component.html
+++ b/projects/WebsiteFrontend/src/app/pages/projects/projects.component.html
@@ -29,6 +29,8 @@
                                 {{ task }}
                             </li>
                         </ul>
+                        <br><br>
+                        <iframe *ngIf="project.trailerUrl != null" width="100%" height="526" [src]="project.trailerUrl | safe" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 </div>
                 <!-- End .education-block -->
 
@@ -38,7 +40,33 @@
 
         </div>
 
-        <iframe *ngIf="project.trailerUrl != null" width="900" height="526" [src]="project.trailerUrl | safe" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <div style="margin-left: 20%; margin-right: 20%" *ngIf="imageUrls.length > 0">
+            <slideshow #slideshow
+                [imageUrls]="imageUrls"
+                [height]="height"
+                [minHeight]="minHeight"
+                [arrowSize]="arrowSize"
+                [showArrows]="showArrows"
+                [disableSwiping]="disableSwiping"
+                [autoPlay]="autoPlay"
+                [stopAutoPlayOnSlide]="stopAutoPlayOnSlide"
+                [debug]="debug"
+                [backgroundSize]="backgroundSize"
+                [backgroundPosition]="backgroundPosition"
+                [backgroundRepeat]="backgroundRepeat"
+                [showDots]="showDots"
+                [dotColor]="dotColor"
+                [showCaptions]="showCaptions"
+                [captionColor]="captionColor"
+                [captionBackground]="captionBackground"
+                [lazyLoad]="lazyLoad"
+                [hideOnNoSlides]="hideOnNoSlides"
+                [fullscreen]="fullscreen">
+             </slideshow>
+        </div>
+        
+
+        
 </div>
 
 <div class="row-back">
