--- a/projects/WebsiteFrontend/src/app/shared/theme/cover/_form.scss
+++ b/projects/WebsiteFrontend/src/app/shared/theme/cover/_form.scss
@@ -59,8 +59,9 @@ input.form-control {
     border-radius: 0;
     border: none;
     border-bottom: 1px solid transparent;
-    background: $border-color;
-    @include transition(all 1s);
+    background: black;
+    font-size: 18px;
+    @include transition(all 0.5s);
     &:focus {
         border-bottom: 1px solid $primary;
     }
