Website: Update routes

--- a/projects/WebsiteFrontend/src/app/app.component.html
+++ b/projects/WebsiteFrontend/src/app/app.component.html
@@ -5,8 +5,8 @@
     </div>
     <div class="container">
         <ul class="nav navbar-nav" routerLinkActive="active">
-            <li class="nav-item"><a class="nav-link" routerLink="personal"><label>Home</label></a></li>
-            <li class="nav-item"><a class="nav-link" routerLink="professional"><label>Projects</label></a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="home"><label>Home</label></a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="projects"><label>Projects</label></a></li>
             <li class="nav-item"><a class="nav-link" routerLink="about"><label>Résumé</label></a></li>
             <li class="nav-item"><a class="nav-link" routerLink="contact"><label>Contact</label></a></li>
         </ul>
